# lottery

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  setup.py  test.py
input_handling/: get.py  validate.py
lottery/: app.py  extensions.py  get.py  models.py  save.py
tests/: get_test.py
tests/data_testing/: participants1.csv  participants1.json
tests/data_testing/lottery_templates/: prize-broken.json
tests/lottery/: app_test.py  conftest.py  get_test.py
