[tool.poetry]
name = "lottery"
version = "0.1.0"
description = "upskill"
authors = ["mipakiet"]

[tool.poetry.dependencies]
python = "^3.10"
pathlib = "^1.0.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"
Faker = "^15.0.0"
testfixtures = "^7.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
